Fix overflow ish for card list daily view.

--- a/src/styles/_main.component.scss
+++ b/src/styles/_main.component.scss
@@ -317,5 +317,9 @@
     display: flex;
     overflow-x: auto;
     // @include debugger();
+
+    .card:last-child .sub-card.type-b {
+      margin-right: 0;
+    }
   }
 }
