--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -391,6 +391,7 @@ body {
           transition: 0.3s ease 0.25s;
           border: 0.125rem solid transparent;
           border-top: none;
+          max-width: 8rem;
           border-bottom: none;
 
           &:hover,
